build-logs-failed/build-universe-some-1.2.1.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - universe-some-1.2.1 (lib) (first run)
 - universe-some-1.2.1 (test:th-test) (first run)
Configuring library for universe-some-1.2.1...
Preprocessing library for universe-some-1.2.1...
Building library for universe-some-1.2.1...
[1 of 2] Compiling Data.Universe.Some
[2 of 2] Compiling Data.Universe.Some.TH
Configuring test suite 'th-test' for universe-some-1.2.1...
Preprocessing test suite 'th-test' for universe-some-1.2.1...
Building test suite 'th-test' for universe-some-1.2.1...
[1 of 1] Compiling Main

test/Test.hs:37:1: error: [GHC-39999]
    • Ambiguous type variable ‘m0’ arising from a use of ‘deriveUniverseSome’
      prevents the constraint ‘(DeriveUniverseSome
                                  (m0 Language.Haskell.TH.Lib.Internal.Decs))’ from being solved.
      Probable fix: use a type annotation to specify what ‘m0’ should be.
      Potentially matching instance:
        instance [safe] DeriveUniverseSome a => DeriveUniverseSome [a]
          -- Defined in ‘Data.Universe.Some.TH’
        ...plus one instance involving out-of-scope types
          Potentially matching instance:
            instance [safe] DeriveUniverseSome a =>
                            DeriveUniverseSome (Language.Haskell.TH.Syntax.Q a)
    • In the expression:
        deriveUniverseSome
          [d| instance Universe b => UniverseSome (Tag2 b) |]
   |
37 | deriveUniverseSome [d| instance Universe b => UniverseSome (Tag2 b) |]
   | ^^^^^^^^^^^^^^^^^^

test/Test.hs:37:20: error: [GHC-39999]
    • Ambiguous type variable ‘m0’ arising from a quotation bracket
      prevents the constraint ‘(Language.Haskell.TH.Syntax.Quote
                                  m0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘m0’ should be.
      Potentially matching instance:
        instance Language.Haskell.TH.Syntax.Quote IO
          -- Defined in ‘Language.Haskell.TH.Syntax’
        ...plus one instance involving out-of-scope types
          Potentially matching instance:
            instance Language.Haskell.TH.Syntax.Quote
                       Language.Haskell.TH.Syntax.Q
    • In the first argument of ‘deriveUniverseSome’, namely
        ‘[d| instance Universe b => UniverseSome (Tag2 b) |]’
      In the expression:
        deriveUniverseSome
          [d| instance Universe b => UniverseSome (Tag2 b) |]
   |
37 | deriveUniverseSome [d| instance Universe b => UniverseSome (Tag2 b) |]
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:th-test from universe-some-1.2.1.

